--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,7 +12,15 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+
+
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+  
 }
+
+
 
 .profile-image {
   background: rebeccapurple;
@@ -45,4 +53,17 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  margin: 0px;
+  padding: 0px;
 }
+
+
+
+
+.headerGroup{
+display: flex;
+gap: 16px;
+align-items: center;
+}
+
